--- a/client/src/app/components/source-suggestions/source-suggestions-table/source-suggestions-table.component.html
+++ b/client/src/app/components/source-suggestions/source-suggestions-table/source-suggestions-table.component.html
@@ -39,6 +39,11 @@
             [nzSortFn]="true">
             Disease
           </th>
+          <th [nzColumnKey]="sortColumns.CreatedAt" 
+            [nzSortDirections]="['descend', 'ascend', null]"
+            [nzSortFn]="true">
+            Date Submitted
+          </th>
           <th>
             Comment
           </th>
@@ -102,6 +107,7 @@
               [onInputChanged]="textInputCallback"></cvc-clearable-input-filter>
           </th>
           <th></th>
+          <th></th>
           <th *ngIf="viewer.signedIn"></th>
         </tr>
       </thead>
@@ -140,6 +146,9 @@
           </td>
           <td>
             <cvc-disease-tag *ngIf="suggestion.disease" [disease]="suggestion.disease"></cvc-disease-tag>
+          </td>
+          <td>
+            {{ suggestion.createdAt | date }}
           </td>
           <td nzAlign="center"
             nz-tooltip
