--- a/client/src/app/views/welcome/welcome.component.less
+++ b/client/src/app/views/welcome/welcome.component.less
@@ -38,6 +38,14 @@
   color: white
 }
 
+#release-info {
+  color: white;
+  a {
+    color: white;
+    text-decoration: underline;
+  }
+}
+
 // .space-align-container {
 //   display: flex;
 //   align-item: flex-start;
