--- a/client/src/themes/overrides/card-table.overrides.less
+++ b/client/src/themes/overrides/card-table.overrides.less
@@ -48,6 +48,10 @@ tr.data-row td.ant-table-cell {
     overflow: hidden;
     text-overflow: ellipsis;
   }
+
+  &.button-cell {
+    padding: 0;
+  }
 }
 
 tr.data-row td.align-right {
