--- a/client/src/app/components/users/users-table/users-table.component.html
+++ b/client/src/app/components/users/users-table/users-table.component.html
@@ -1,46 +1,66 @@
-<nz-card [nzTitle]="titleTemplate">
-  <nz-table #userTable
+<!-- adjust nz-card's cvcAutoHeightCard to equalize padding around this table's container e.g. entity-home's nz-page-header components -->
+<nz-card [nzTitle]="titleTemplate"
+  [nzExtra]="extraTemplate"
+  nzSize="small"
+  cvcAutoHeightCard="35">
+  <!-- adjust nz-table's cvcAutoHeightTable to ensure that table's column header rows are not clipped when table is scrolled to bottom -->
+  <!-- nzVirtualItemSize can be determined by inspecting the row element in Dev tools, and noting the height calculated in its Styles tab. this probably shouldn't change much, if at all. -->
+  <!-- nzScroll x value is set to the height of the rendered nz-table-inner-scroll element, and determines the height of the table before the auto-height directives resize them.  -->
+  <!-- nzScroll y value has something to do with the width of the horizontal scrollable area between nzLeft and nzRight columns, but I have not figured out exactly how they're related. -->
+  <nz-table #virtualTable
     nzSize="small"
-    [nzData]="(users$ | ngrxPush)"
-    [nzLoading]="(isLoading$ | ngrxPush)"
+    [cvcAutoHeightTable]="25"
+    [nzVirtualItemSize]="29"
+    [nzData]="users$ | ngrxPush"
+    [nzLoading]="isLoading"
+    [nzVirtualForTrackBy]="trackByIndex"
+    [nzScroll]="{ x: '680px', y: '800px' }"
     [nzFrontPagination]="false"
     [nzShowPagination]="false">
     <thead (nzSortOrderChange)="onSortChanged($event)">
-      <tr>
-        <th nzWidth="5%">
-          Username
+      <tr class="col-header-row">
+        <th nzWidth="200px"
+          nzLeft>
+          User
         </th>
-        <th nzWidth="15%"
+        <th nzWidth="150px"
           [nzColumnKey]="sortColumns.Name"
           [nzSortFn]="true">
           Name
         </th>
-        <th>
+        <th nzWidth="300px">
           Organizations
         </th>
-        <th [nzColumnKey]="sortColumns.Role"
+        <th nzWidth="80px"
+          [nzColumnKey]="sortColumns.Role"
           [nzSortFn]="true">
           Role
         </th>
-        <th nzRight
-          nz-tooltip
-          nzTooltipTitle="Evidence Count">
-          <i nz-icon
-            nzType="civic:evidence"></i>
-        </th>
-        <th nzRight
-          nz-tooltip
-          nzTooltipTitle="Revision Count">
-          <i nz-icon
-            nzType="civic:revision"></i>
-        </th>
-        <th [nzColumnKey]="sortColumns.LastAction"
+        <th nzWidth="85px"
+          nzAlign="right"
+          [nzColumnKey]="sortColumns.LastAction"
           [nzSortFn]="true">
           Last Action
         </th>
+        <th nzWidth="75px"
+          nzRight
+          nzAlign="right"
+          nz-tooltip
+          nzTooltipTitle="Evidence Count">
+          <i nz-icon
+            nzType="civic:evidence"></i> Count
+        </th>
+        <th nzWidth="75px"
+          nzRight
+          nzAlign="right"
+          nz-tooltip
+          nzTooltipTitle="Revision Count">
+          <i nz-icon
+            nzType="civic:revision"></i> Count
+        </th>
       </tr>
-      <tr>
-        <th></th>
+      <tr class="filter-row">
+        <th nzLeft></th>
         <th>
           <cvc-clearable-input-filter [(inputModel)]="nameInput"
             placeholderText="Search Name"
@@ -53,77 +73,73 @@
         </th>
         <th>
           <nz-select nzAllowClear
-            nzPlaceHolder="All"
+            nzSize="small"
+            nzPlaceHolder="Any"
             [nzDropdownMatchSelectWidth]="false"
             (ngModelChange)="onModelChanged()"
             [(ngModel)]="roleInput">
             <nz-option nzValue="ADMIN"
-              nzLabel="ADMIN"></nz-option>
+              nzLabel="Admin"></nz-option>
             <nz-option nzValue="CURATOR"
-              nzLabel="CURATOR"></nz-option>
+              nzLabel="Curator"></nz-option>
             <nz-option nzValue="EDITOR"
-              nzLabel="EDITOR"></nz-option>
+              nzLabel="Editor"></nz-option>
           </nz-select>
         </th>
         <th></th>
-        <th></th>
-        <th></th>
+        <th nzRight></th>
+        <th nzRight></th>
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let user of userTable.data">
-        <td>
-          <cvc-user-tag [user]="user"></cvc-user-tag>
-        </td>
-        <td>
-          <ng-container *ngIf="user.name; else nameElse">
-            {{ user.name }}
-          </ng-container>
-          <ng-template #nameElse>
-            <i>N/A</i>
-          </ng-template>
-        </td>
-        <td>
-          <div *ngIf="user.organizations.length > 0; else orgElse">
-            <cvc-tag-list>
-              <span *ngFor="let org of user.organizations; last as isLast">
-              <cvc-organization-tag [org]="org"></cvc-organization-tag>
-            </span>
-            </cvc-tag-list>
-          </div>
-          <ng-template #orgElse>
-            <i>--</i>
-          </ng-template>
-        </td>
-        <td>
-          {{ user.role | enumToTitle }}
-        </td>
-        <td>
-          {{ user.statsHash.submittedEvidenceItems }}
-        </td>
-        <td>
-          {{ user.statsHash.revisions }}
-        </td>
-        <td>
-          <ng-container *ngIf="user.mostRecentActionTimestamp else eventElse">
-            {{ user.mostRecentActionTimestamp | timeago }}
-          </ng-container>
-          <ng-template #eventElse>
-            --
-          </ng-template>
-        </td>
-      </tr>
-      <!-- Load More Button Row -->
-      <ng-container *ngrxLet="pageInfo$ as pageInfo">
-        <tr *ngIf="pageInfo.hasNextPage">
-          <td colspan="20">
-            <button *ngIf="pageInfo.hasNextPage"
-              (click)="loadMore(pageInfo.endCursor)"
-              nz-button
-              nzBlock>Load {{this.initialPageSize}} More</button>
+      <ng-template nz-virtual-scroll
+        let-user
+        let-index="index">
+        <tr class="data-row">
+          <td nzLeft>
+            <cvc-user-tag [user]="user"></cvc-user-tag>
+          </td>
+          <td class="overflow-ellipsis">
+            <ng-container *ngIf="user.name; else nameElse">
+              {{ user.name }}
+            </ng-container>
+            <ng-template #nameElse>
+              <i nz-typography
+                nzType="secondary">Not specified</i>
+            </ng-template>
+          </td>
+          <td>
+            <div *ngIf="user.organizations.length > 0; else orgElse">
+              <cvc-tag-overflow tagType="organization"
+                [maxDisplayCount]="1"
+                [tags]="user.organizations"
+                [matchingText]="orgNameInput">
+              </cvc-tag-overflow>
+            </div>
+            <ng-template #orgElse>
+              <i nz-typography
+                nzType="secondary">None specified</i>
+            </ng-template>
+          </td>
+          <td>
+            {{ user.role | enumToTitle }}
+          </td>
+          <td nzAlign="right">
+            <ng-container *ngIf="user.mostRecentActionTimestamp else eventElse">
+              {{ user.mostRecentActionTimestamp | timeago }}
+            </ng-container>
+            <ng-template #eventElse>
+              --
+            </ng-template>
+          </td>
+          <td nzRight nzAlign="right">
+            {{ user.statsHash.submittedEvidenceItems }}
+          </td>
+          <td nzRight nzAlign="right">
+            {{ user.statsHash.revisions }}
           </td>
         </tr>
-      </ng-container>
+      </ng-template>
     </tbody>
   </nz-table>
 </nz-card>
@@ -148,4 +164,13 @@
       (0 total)
     </span>
   </ng-template>
+</ng-template>
+
+<ng-template #extraTemplate>
+  <nz-tag nzColor="warning"
+    *ngIf="noMoreRows$ | ngrxPush">
+    <i nz-icon
+      nzType="exclamation-circle"></i>
+    <span>End of results reached</span>
+  </nz-tag>
 </ng-template>
