--- a/client/src/app/components/users/users-table/users-table.component.html
+++ b/client/src/app/components/users/users-table/users-table.component.html
@@ -156,7 +156,7 @@
   <span *ngIf="(filteredCount$ | ngrxPush) as filteredCount; else noData"
     nz-typography
     nzType="secondary">
-    ({{totalCount}} total, showing {{visibleCount}}<span *ngIf="totalCount && filteredCount < totalCount"> of {{filteredCount}} filtered</span>)
+    ({{totalCount | number }} total, showing {{visibleCount | number}}<span *ngIf="totalCount && filteredCount < totalCount"> of {{filteredCount | number}} filtered</span>)
   </span>
   <ng-template #noData>
     <span nz-typography
