--- a/client/src/app/components/evidence/evidence-table/evidence-table.component.html
+++ b/client/src/app/components/evidence/evidence-table/evidence-table.component.html
@@ -57,6 +57,11 @@
           [nzSortFn]="true">
           Drugs
         </th>
+        <th nzWidth="40px"
+          nz-tooltip
+          nzTooltipTitle="Drug Interaction Type">
+          DIT
+        </th>
         <th nzWidth="60px"
           nzRight
           [nzColumnKey]="sortColumns.Description"
@@ -145,6 +150,8 @@
         <th>
           <cvc-clearable-input-filter [(inputModel)]="drugNameInput"
             [onInputChanged]="textInputCallback"></cvc-clearable-input-filter>
+        </th>
+        <th>
         </th>
         <th nzAlign="center"
           nzRight>
@@ -312,15 +319,7 @@
         </th>
       </tr>
     </thead>
-    <!-- must wait until after view init to show table, or else virtual-scroll container
-         only shows the first 15-20 rows -->
     <tbody>
-
-      <!-- this works, but throws three errors before length func non-null -->
-      <!-- <tbody *ngIf="(evidence$ | ngrxPush).length > 0"> -->
-
-      <!-- showTbody set to true in AfterViewInit fills table properly -->
-      <!-- <tbody *ngIf="showTbody"> -->
       <ng-template nz-virtual-scroll
         let-eid
         let-index="index">
@@ -354,16 +353,6 @@
           <td>
             <div *ngIf="eid.drugs.length > 0; else drugsElse">
               <cvc-tag-list>
-                <ng-container *ngIf="eid.drugs.length > 1">
-                  <nz-tag nz-tooltip
-                    nzTooltipPlacement="top"
-                    [nzTooltipTitle]="showTooltips ? (eid.drugInteractionType | drugInteractionEnumDisplay) : ''">
-                    <i nz-icon
-                      style="color: #ac3996"
-                      [nzType]="eid.drugInteractionType | drugInteractionEnumDisplay: 'icon-name'"
-                      class="attribute-icon"></i>
-                  </nz-tag>
-                </ng-container>
                 <ng-container *ngFor="let drug of eid.drugs">
                   <cvc-drug-tag [drug]="drug"
                     [truncateLongName]="true"></cvc-drug-tag>
@@ -374,6 +363,21 @@
               <i nz-typography
                 nzType="secondary">N/A</i>
             </ng-template>
+          </td>
+          <td>
+            <ng-container *ngIf="eid.drugInteractionType">
+              <nz-tag nz-tooltip
+                nzTooltipPlacement="top"
+                [nzTooltipTitle]="showTooltips ? (eid.drugInteractionType | drugInteractionEnumDisplay) : ''">
+                <i nz-icon
+                  style="color: #ac3996"
+                  [nzType]="eid.drugInteractionType | drugInteractionEnumDisplay: 'icon-name'"
+                  class="attribute-icon"></i>
+              </nz-tag>
+            </ng-container>
+            <ng-container *ngIf="!eid.drugInteractionType">
+              <i nz-typography nzType="secondary">N/A</i>
+            </ng-container>
           </td>
           <td nzAlign="center"
             nzRight>
