evidence-table's cvcHeight Input working

--- a/client/src/app/components/assertions/assertions-table/assertions-table.component.html
+++ b/client/src/app/components/assertions/assertions-table/assertions-table.component.html
@@ -42,7 +42,7 @@
           [nzSortFn]="true">
           Disease
         </th>
-        <th nzWidth="350px"
+        <th nzWidth="px"
           [nzColumnKey]="sortColumns.DrugName"
           [nzSortFn]="true">
           Drugs
