--- a/client/src/app/components/source-suggestions/source-suggestions-table/source-suggestions-table.component.html
+++ b/client/src/app/components/source-suggestions/source-suggestions-table/source-suggestions-table.component.html
@@ -3,7 +3,7 @@
   *ngrxLet="viewer$ as viewer"
   [nzExtra]="extraTemplate"
   nzSize="small"
-  cvcAutoHeightCard="35">
+  [cvcAutoHeightCard]="35">
   <nz-table #virtualTable
     nzSize="small"
     [cvcAutoHeightTable]="25"
