--- a/client/src/app/components/evidence/evidence-table/evidence-table.component.html
+++ b/client/src/app/components/evidence/evidence-table/evidence-table.component.html
@@ -1,4 +1,4 @@
-<!-- if cvcHeight not specified, render table with cvcAutoHeightCard directive -->
+<!-- if cvcHeight not specified, render table without card height container & viewport target -->
 <ng-container *ngIf="!cvcHeight; else setHeightCard">
   <!-- adjust nz-card's cvcAutoHeightCard to equalize padding around this table's container e.g. entity-home's nz-page-header components -->
   <nz-card [nzTitle]="titleTemplate"
@@ -24,10 +24,7 @@
 </ng-template>
 
 <ng-template #table>
-  <!-- adjust nz-table's cvcAutoHeightTable to ensure that table's column header rows are not clipped when table is scrolled to bottom -->
   <!-- nzVirtualItemSize can be determined by inspecting the row element in Dev tools, and noting the height calculated in its Styles tab. this probably shouldn't change much, if at all. -->
-  <!-- nzScroll x sets the minimum height of the rendered nz-table-inner-scroll element, which determines the height of the table before the auto-height directives resize them.  -->
-  <!-- nzScroll y has something to do with the width of the horizontal scrollable area between nzLeft and nzRight columns, but I have not figured out exactly how they're related. -->
   <nz-table #virtualTable
     nzSize="small"
     [cvcAutoHeightTable]="25"
