--- a/client/src/app/components/shared/section-navigation/section-navigation.component.less
+++ b/client/src/app/components/shared/section-navigation/section-navigation.component.less
@@ -1,4 +1,4 @@
-@import 'themes/default.less';
+@import "themes/default.less";
 
 :host {
   display: block;
@@ -7,30 +7,26 @@
 #nav-container {
   // pull host to edge of section container so we can easily get its content vert. centered
   margin-top: -@default-padding-sm;
-  padding: @default-padding-xss @default-padding-xs;
+  padding: @default-padding-xs @default-padding-xs;
 
-  // override the above default padding
-  // and provide more vertical padding if we're showing the relations container
-  &.has-relations {
-    padding: @default-padding-xs @default-padding-xs;
-  }
-  //same for action btns
+  // action buttons are a bit taller, subtract a bit of padding to account
   &.has-actions {
     padding: @default-padding-xs - 1 @default-padding-xs - 1;
   }
-
 }
 
 // using ng-deep to select child zorro component elements
-#breadcrumbs ::ng-deep {
-  // switch to dark theme colors
-  .ant-breadcrumb a,
-  .ant-breadcrumb-separator {
-    color: @text-color-secondary-dark;
-  }
-  // same as default, specifying color above seems to interfere with its selector
-  .ant-breadcrumb a:hover {
-    color: @primary-5;
+#breadcrumbs {
+  ::ng-deep {
+    // switch to dark theme colors
+    .ant-breadcrumb a,
+    .ant-breadcrumb-separator {
+      color: @text-color-secondary-dark;
+    }
+    // same as default, specifying color above seems to interfere with its selector
+    .ant-breadcrumb a:hover {
+      color: @primary-5;
+    }
   }
 }
 
