updated clinical-trial, queue, and drug interaction type icons

--- a/client/src/app/layout/layout.component.html
+++ b/client/src/app/layout/layout.component.html
@@ -175,7 +175,7 @@
             nzSelected
             nzMatchRouter>
             <i nz-icon
-              nzType="civic-collection"></i>
+              nzType="civic-queue"></i>
             <span>
               <a routerLink="/curation/queues">Queues</a>
             </span>
