--- a/client/src/app/views/curation/curation-queues/curation-queues.view.html
+++ b/client/src/app/views/curation/curation-queues/curation-queues.view.html
@@ -8,7 +8,7 @@
       <nz-col nzFlex="64px"
         class="header-icon">
         <i nz-icon
-          nzType="civic:collection"></i>
+          nzType="civic:queue"></i>
       </nz-col>
       <nz-col nzFlex="600px"
         class="header-description">
