--- a/client/src/app/views/clinical-trials/clinical-trials-detail/clinical-trials-summary/clinical-trials-summary.component.html
+++ b/client/src/app/views/clinical-trials/clinical-trials-detail/clinical-trials-summary/clinical-trials-summary.component.html
@@ -1,4 +1,10 @@
-<nz-space nzSize="middle" *ngIf="clinicalTrialId" nzDirection="vertical" class="space-align-block">
-  <cvc-sources-table [clinicalTrialId]="clinicalTrialId" cvcTitle="Clinical Trial Sources" *nzSpaceItem></cvc-sources-table>
-  <cvc-evidence-table [clinicalTrialId]="clinicalTrialId" cvcTitle="Clinical Trial Evidence" *nzSpaceItem></cvc-evidence-table>
-</nz-space>
+<nz-row [nzGutter]="[8, 16]">
+  <nz-col [nzSpan]="24">
+    <cvc-sources-table [clinicalTrialId]="clinicalTrialId"
+      cvcTitle="Clinical Trial Sources" [cvcHeight]="400"></cvc-sources-table>
+  </nz-col>
+  <nz-col [nzSpan]="24">
+    <cvc-evidence-table [clinicalTrialId]="clinicalTrialId"
+      cvcTitle="Clinical Trial Evidence"></cvc-evidence-table>
+  </nz-col>
+</nz-row>
