--- a/client/src/app/components/assertions/assertions-table/assertions-table.component.html
+++ b/client/src/app/components/assertions/assertions-table/assertions-table.component.html
@@ -1,6 +1,5 @@
 <!-- if cvcHeight not specified, render table with viewport target, without card height container -->
 <ng-container *ngIf="!cvcHeight; else setHeightCard">
-  <!-- adjust nz-card's cvcAutoHeightCard to equalize padding around this table's container e.g. entity-home's nz-page-header components -->
   <nz-card [nzTitle]="titleTemplate"
     [nzExtra]="extraTemplate"
     nzSize="small"
@@ -24,7 +23,7 @@
 </ng-template>
 
 <ng-template #table>
-<!-- nzVirtualItemSize can be determined by inspecting the row element in Dev tools, and noting the height calculated in its Styles tab. this probably shouldn't change much, if at all. -->
+  <!-- nzVirtualItemSize can be determined by inspecting the row element in Dev tools, and noting the height calculated in its Styles tab. this probably shouldn't change much, if at all. -->
   <nz-table #virtualTable
     nzSize="small"
     [cvcAutoHeightTable]="25"
@@ -60,7 +59,7 @@
           [nzSortFn]="true">
           Disease
         </th>
-        <th nzWidth="px"
+        <th nzWidth="350px"
           [nzColumnKey]="sortColumns.DrugName"
           [nzSortFn]="true">
           Drugs
@@ -122,7 +121,7 @@
           [nzSortDirections]="['descend', 'ascend', null]"
           nz-tooltip
           nzTooltipTitle="Evidence Count"><i nz-icon
-                                            nzType="civic:evidence"></i> Count
+            nzType="civic:evidence"></i> Count
         </th>
       </tr>
       <tr class="filter-row">
