use colored icon

--- a/client/src/app/components/sources/sources-table/sources-table.component.html
+++ b/client/src/app/components/sources/sources-table/sources-table.component.html
@@ -90,7 +90,7 @@
           [nzSortDirections]="['descend', 'ascend', null]"
           nz-tooltip
           nzTooltipTitle="Suggestion Count">
-          <i nz-icon nzType="civic-queue"></i> Count
+          <i nz-icon nzType="civic:queue"></i> Count
         </th>
       </tr>
       <tr class="filter-row">
