better directive API

--- a/client/src/app/components/evidence/evidence-table/evidence-table.component.html
+++ b/client/src/app/components/evidence/evidence-table/evidence-table.component.html
@@ -29,8 +29,8 @@
     nzSize="small"
     [cvcAutoHeightTable]="25"
     cvcTableScroll
-    (cvcTableScrollOnLoadMore)="onLoadMore()"
-    (cvcTableScrollOnScrolled)="onScrolled($event)"
+    (cvcTableScrollOnScrollEnd)="onScrollEnd()"
+    (cvcTableScrollOnScroll)="onScroll($event)"
     [nzVirtualItemSize]="29"
     [nzVirtualForTrackBy]="trackByIndex"
     [nzData]="evidence$ | ngrxPush"
